# ai-voice-assistant

./: .gitignore  README.md  main.py  pyproject.toml  tasks.txt
config/: stt_models.json
src/: audio.py  llm.py  stt.py  tts.py
